# iterator_adapter

./: CMakeLists.txt
include/iterator_adapter/: iterator_adapter.h
test/: test_iterator_adapter.cpp
